--- a/index.html
+++ b/index.html
@@ -96,20 +96,37 @@
     </div>
 
     <div class="hero__content">
+      <!-- Badge Google Rating -->
+      <div class="google-rating-badge reveal">
+        <svg class="google-rating-badge__logo" viewBox="0 0 24 24" width="20" height="20">
+          <path fill="#4285F4"
+            d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" />
+          <path fill="#34A853"
+            d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" />
+          <path fill="#FBBC05"
+            d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" />
+          <path fill="#EA4335"
+            d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" />
+        </svg>
+        <span class="google-rating-badge__stars">★★★★★</span>
+        <span class="google-rating-badge__score">4.8</span>
+        <span class="google-rating-badge__count">124 avis</span>
+      </div>
+
       <div class="hero__badge reveal">
         <span class="hero__badge-icon">🔥</span>
-        <span>Depuis 1998 à Lyon</span>
+        <span>Salle indépendante depuis 1998</span>
       </div>
 
       <h1 class="hero__title reveal">
-        <span class="word">Ta salle.</span><br>
-        <span class="word text-gradient">Ta famille.</span><br>
-        <span class="word">Ton évolution.</span>
+        <span class="word">L'ambiance</span><br>
+        <span class="word text-gradient">Old School</span><br>
+        <span class="word">de Lyon</span>
       </h1>
 
       <p class="hero__subtitle reveal">
-        Chez VO2Max, on s'entraîne ensemble, on progresse ensemble.
-        Une ambiance conviviale, des équipements pro, et des coachs qui te poussent à donner le meilleur.
+        Ici, tout le monde se dit bonjour. Pas une chaîne de fitness — une vraie communauté de passionnés
+        où l'entraide et le dépassement de soi sont au rendez-vous depuis 25 ans.
       </p>
 
       <div class="hero__ctas reveal">
@@ -398,63 +415,235 @@
     </div>
   </div>
 
-  <!-- Testimonials Section -->
+  <!-- Testimonials Section - Vrais Avis Google -->
   <section class="testimonials section" id="testimonials">
     <div class="container">
       <div class="section-header reveal">
-        <span class="section-tag">⭐ Témoignages</span>
-        <h2 class="section-title">Ce qu'ils disent<br><span class="text-gradient">de nous</span></h2>
+        <span class="section-tag">⭐ Avis Google</span>
+        <h2 class="section-title">124 membres<br><span class="text-gradient">nous recommandent</span></h2>
+
+        <!-- Google Rating Summary -->
+        <div class="google-summary">
+          <div class="google-summary__score">
+            <span class="google-summary__number">4.8</span>
+            <div class="google-summary__stars">★★★★★</div>
+            <span class="google-summary__count">124 avis sur Google</span>
+          </div>
+        </div>
       </div>
 
       <div class="testimonials__grid">
-        <div class="testimonial-card reveal">
-          <div class="testimonial-card__rating">★★★★★</div>
-          <p class="testimonial-card__text">
-            "Super salle avec un personnel accueillant et des équipements de qualité. Les coachs sont très
-            professionnels !"
-          </p>
-          <div class="testimonial-card__author">
-            <div class="testimonial-card__avatar">S</div>
-            <div>
-              <span class="testimonial-card__name">Stephan M.</span>
-              <span class="testimonial-card__time">Membre depuis 2 ans</span>
+        <!-- Avis 1 - Anthony Dijon -->
+        <div class="google-review-card reveal">
+          <div class="google-review-card__header">
+            <div class="google-review-card__avatar" style="background: #E53935;">A</div>
+            <div class="google-review-card__author">
+              <div class="google-review-card__name">
+                Anthony Dijon
+                <span class="google-review-card__badge">Local Guide</span>
+              </div>
+              <div class="google-review-card__meta">15 avis · 15 photos</div>
             </div>
+            <svg class="google-review-card__logo" viewBox="0 0 24 24" width="24" height="24">
+              <path fill="#4285F4"
+                d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" />
+              <path fill="#34A853"
+                d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" />
+              <path fill="#FBBC05"
+                d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" />
+              <path fill="#EA4335"
+                d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" />
+            </svg>
           </div>
+          <div class="google-review-card__rating">
+            <span class="google-review-card__stars">★★★★★</span>
+            <span class="google-review-card__date">Il y a un mois</span>
+          </div>
+          <p class="google-review-card__text">
+            Meilleure salle de Lyon. Salle indépendante. Ambiance Old School. Au top !
+          </p>
         </div>
 
-        <div class="testimonial-card reveal">
-          <div class="testimonial-card__rating">★★★★★</div>
-          <p class="testimonial-card__text">
-            "Ambiance conviviale et matériel au top. J'y vais depuis 2 ans et c'est toujours un plaisir !"
-          </p>
-          <div class="testimonial-card__author">
-            <div class="testimonial-card__avatar">J</div>
-            <div>
-              <span class="testimonial-card__name">Jean-Baptiste O.</span>
-              <span class="testimonial-card__time">Membre depuis 3 ans</span>
+        <!-- Avis 2 - Stephan Marfaing -->
+        <div class="google-review-card reveal">
+          <div class="google-review-card__header">
+            <div class="google-review-card__avatar" style="background: #FF9800;">S</div>
+            <div class="google-review-card__author">
+              <div class="google-review-card__name">
+                Stephan Marfaing
+                <span class="google-review-card__badge">Local Guide</span>
+              </div>
+              <div class="google-review-card__meta">65 avis · 348 photos</div>
             </div>
+            <svg class="google-review-card__logo" viewBox="0 0 24 24" width="24" height="24">
+              <path fill="#4285F4"
+                d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" />
+              <path fill="#34A853"
+                d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" />
+              <path fill="#FBBC05"
+                d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" />
+              <path fill="#EA4335"
+                d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" />
+            </svg>
           </div>
+          <div class="google-review-card__rating">
+            <span class="google-review-card__stars">★★★★★</span>
+            <span class="google-review-card__date">Il y a un an</span>
+          </div>
+          <p class="google-review-card__text">
+            Très bonne salle, intimiste, à l'ancienne. Tout le monde ou presque se dit bonjour ! La gamme de machines
+            est vraiment bien, très diversifiée. Bref n'y allez pas sinon y aura trop de monde 😊
+          </p>
         </div>
 
-        <div class="testimonial-card reveal">
-          <div class="testimonial-card__rating">★★★★★</div>
-          <p class="testimonial-card__text">
-            "Excellente salle, propre et bien équipée. Les horaires sont parfaits pour moi !"
-          </p>
-          <div class="testimonial-card__author">
-            <div class="testimonial-card__avatar">F</div>
-            <div>
-              <span class="testimonial-card__name">Filippo C.</span>
-              <span class="testimonial-card__time">Membre depuis 1 an</span>
+        <!-- Avis 3 - Pierre-Edouard TOUSSENEL -->
+        <div class="google-review-card reveal">
+          <div class="google-review-card__header">
+            <div class="google-review-card__avatar" style="background: #9C27B0;">P</div>
+            <div class="google-review-card__author">
+              <div class="google-review-card__name">Pierre-Edouard TOUSSENEL</div>
+              <div class="google-review-card__meta">5 avis · 1 photo</div>
             </div>
+            <svg class="google-review-card__logo" viewBox="0 0 24 24" width="24" height="24">
+              <path fill="#4285F4"
+                d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" />
+              <path fill="#34A853"
+                d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" />
+              <path fill="#FBBC05"
+                d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" />
+              <path fill="#EA4335"
+                d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" />
+            </svg>
+          </div>
+          <div class="google-review-card__rating">
+            <span class="google-review-card__stars">★★★★★</span>
+            <span class="google-review-card__date">Il y a un mois</span>
+          </div>
+          <p class="google-review-card__text">
+            Excellente salle de sport pour tous niveaux ! Les coachs sont toujours disponibles, souriants et de très bon
+            conseils. Ambiance familiale très appréciable qui incite à y aller régulièrement.
+          </p>
+        </div>
+
+        <!-- Avis 4 - Laurent Boivin -->
+        <div class="google-review-card reveal">
+          <div class="google-review-card__header">
+            <div class="google-review-card__avatar" style="background: #4CAF50;">L</div>
+            <div class="google-review-card__author">
+              <div class="google-review-card__name">Laurent Boivin</div>
+              <div class="google-review-card__meta">5 avis</div>
+            </div>
+            <svg class="google-review-card__logo" viewBox="0 0 24 24" width="24" height="24">
+              <path fill="#4285F4"
+                d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" />
+              <path fill="#34A853"
+                d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" />
+              <path fill="#FBBC05"
+                d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" />
+              <path fill="#EA4335"
+                d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" />
+            </svg>
+          </div>
+          <div class="google-review-card__rating">
+            <span class="google-review-card__stars">★★★★★</span>
+            <span class="google-review-card__date">Il y a 8 ans</span>
+          </div>
+          <p class="google-review-card__text">
+            On se sent vite très bien dans cette salle ! Équipe très sympathique et souriante, ambiance détendue et
+            chaleureuse, bon matos, bref, je conseille !
+          </p>
+        </div>
+
+        <!-- Avis 5 - Sofiene Parriaux -->
+        <div class="google-review-card reveal">
+          <div class="google-review-card__header">
+            <div class="google-review-card__avatar" style="background: #2196F3;">S</div>
+            <div class="google-review-card__author">
+              <div class="google-review-card__name">
+                Sofiene Parriaux
+                <span class="google-review-card__badge">Local Guide</span>
+              </div>
+              <div class="google-review-card__meta">18 avis</div>
+            </div>
+            <svg class="google-review-card__logo" viewBox="0 0 24 24" width="24" height="24">
+              <path fill="#4285F4"
+                d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" />
+              <path fill="#34A853"
+                d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" />
+              <path fill="#FBBC05"
+                d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" />
+              <path fill="#EA4335"
+                d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" />
+            </svg>
+          </div>
+          <div class="google-review-card__rating">
+            <span class="google-review-card__stars">★★★★★</span>
+            <span class="google-review-card__date">Il y a 8 ans</span>
+          </div>
+          <p class="google-review-card__text">
+            Une super salle, avec une super ambiance et des coach vraiment sympas et pro ! Continuez comme ça ! Note
+            spéciale au Patron toujours là pour aider ! Bravo !!!
+          </p>
+        </div>
+
+        <!-- Avis 6 - François Berret -->
+        <div class="google-review-card reveal">
+          <div class="google-review-card__header">
+            <div class="google-review-card__avatar" style="background: #FF5722;">F</div>
+            <div class="google-review-card__author">
+              <div class="google-review-card__name">François Berret</div>
+              <div class="google-review-card__meta">4 avis</div>
+            </div>
+            <svg class="google-review-card__logo" viewBox="0 0 24 24" width="24" height="24">
+              <path fill="#4285F4"
+                d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" />
+              <path fill="#34A853"
+                d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" />
+              <path fill="#FBBC05"
+                d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" />
+              <path fill="#EA4335"
+                d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" />
+            </svg>
+          </div>
+          <div class="google-review-card__rating">
+            <span class="google-review-card__stars">★★★★★</span>
+            <span class="google-review-card__date">Il y a 3 ans</span>
+          </div>
+          <p class="google-review-card__text">
+            Accueil, ambiance, équipements, tarifs...tout est au top dans cette salle !
+          </p>
+        </div>
+      </div>
+
+      <!-- Other Platforms -->
+      <div class="other-ratings reveal">
+        <span class="other-ratings__label">Également noté sur :</span>
+        <div class="other-ratings__items">
+          <div class="other-ratings__item">
+            <span class="other-ratings__platform">Facebook</span>
+            <span class="other-ratings__score">4.8/5</span>
+          </div>
+          <div class="other-ratings__item">
+            <span class="other-ratings__platform">TooLyon</span>
+            <span class="other-ratings__score">4.8/5</span>
+          </div>
+          <div class="other-ratings__item">
+            <span class="other-ratings__platform">Salles-Sport.fr</span>
+            <span class="other-ratings__score">9.6/10</span>
           </div>
         </div>
       </div>
 
       <div class="testimonials__cta reveal">
-        <a href="https://www.google.com/search?q=Vo2Max+Evolution+Avis" target="_blank" rel="noopener"
-          class="btn btn--ghost">
-          Voir tous les avis Google →
+        <a href="https://www.google.com/maps/place/Vo2Max+Evolution/@45.7450979,4.8287156,17z/data=!4m8!3m7!1s0x47f4ea3a4b5b5b5b:0x5b5b5b5b5b5b5b5b!8m2!3d45.7450979!4d4.8287156!9m1!1b1!16s%2Fg%2F11c1p1p1p1"
+          target="_blank" rel="noopener" class="btn btn--primary">
+          <svg viewBox="0 0 24 24" width="20" height="20" style="margin-right: 8px;">
+            <path fill="currentColor"
+              d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" />
+            <path fill="currentColor"
+              d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" />
+          </svg>
+          Voir les 124 avis sur Google
         </a>
       </div>
     </div>
