📸 Intégration vraies photos salle et équipe
- 9 images ajoutées (gym + team)
- Section About avec galerie photos panoramique salle
- Section Team avec photos Nassim, Tayeb et coach
- Copywriting mis à jour (Old School, communauté)
- Hover effects sur les photos
- Responsive design mobile

--- a/index.html
+++ b/index.html
@@ -350,52 +350,76 @@
         <div class="about__content reveal">
           <span class="section-tag">🏠 À Propos</span>
           <h2 class="section-title">
-            Plus qu'une salle,<br>
-            <span class="text-gradient">une famille</span>
+            L'ambiance<br>
+            <span class="text-gradient">Old School</span>
           </h2>
           <p class="about__text">
-            Depuis 1998, VO2Max est un pilier du sport à Lyon. On a créé un espace où tout le monde se sent chez soi,
-            que tu sois débutant ou athlète confirmé.
+            Depuis 1998, VO2Max est <strong>la salle indépendante</strong> des passionnés de musculation à Lyon.
+            Ici, pas de chaîne de fitness impersonnelle — une vraie communauté où tout le monde se dit bonjour.
           </p>
           <p class="about__text">
-            Notre philosophie ? <strong>T'accompagner dans ta progression</strong> avec bienveillance et exigence.
-            Ici, pas de jugement, juste de la motivation et des résultats.
+            Notre philosophie ? <strong>Intimiste et authentique</strong>. Des équipements de qualité (Gymleco, Matrix),
+            une ambiance familiale, et des coachs toujours disponibles pour t'accompagner.
           </p>
 
           <div class="about__values">
             <div class="about__value">
               <span class="about__value-icon">🤝</span>
               <div>
-                <h4>Convivialité</h4>
-                <p>Une ambiance familiale où chacun a sa place</p>
+                <h4>Communauté</h4>
+                <p>Tout le monde se dit bonjour, entraide garantie</p>
               </div>
             </div>
             <div class="about__value">
-              <span class="about__value-icon">🎯</span>
+              <span class="about__value-icon">🏋️</span>
               <div>
-                <h4>Résultats</h4>
-                <p>Un accompagnement pro pour atteindre tes objectifs</p>
+                <h4>Old School</h4>
+                <p>L'esprit authentique de la vraie musculation</p>
               </div>
             </div>
           </div>
         </div>
 
         <div class="about__visual reveal">
-          <div class="about__image-wrapper">
-            <div class="about__image-content">
-              <span class="about__image-emoji">🏋️‍♂️</span>
-              <span class="about__image-text">600m² d'équipements</span>
+          <!-- Galerie Images -->
+          <div class="about__gallery">
+            <div class="about__gallery-main">
+              <img src="./assets/images/gym/salle-panorama.jpg" alt="Vue panoramique de la salle VO2Max" loading="lazy">
+            </div>
+            <div class="about__gallery-grid">
+              <img src="./assets/images/gym/salle-poids.jpg" alt="Espace poids libres" loading="lazy">
+              <img src="./assets/images/gym/dumbbells.jpg" alt="Rack d'haltères" loading="lazy">
             </div>
           </div>
-          <div class="about__stats-card">
-            <div class="about__mini-stat">
-              <span class="about__mini-stat-value">25+</span>
-              <span class="about__mini-stat-label">ans d'expérience</span>
+        </div>
+      </div>
+
+      <!-- Team Section -->
+      <div class="team reveal">
+        <h3 class="team__title">👋 L'équipe qui t'accueille</h3>
+        <p class="team__subtitle">Nassim, Tayeb et toute l'équipe sont là pour t'accompagner</p>
+
+        <div class="team__grid">
+          <div class="team__member">
+            <div class="team__photo">
+              <img src="./assets/images/team/coach-nassim.jpg" alt="Coach VO2Max" loading="lazy">
             </div>
-            <div class="about__mini-stat">
-              <span class="about__mini-stat-value">1000+</span>
-              <span class="about__mini-stat-label">membres satisfaits</span>
+            <h4 class="team__name">Nassim</h4>
+            <span class="team__role">Co-fondateur</span>
+          </div>
+          <div class="team__member">
+            <div class="team__photo">
+              <img src="./assets/images/team/coach-tayeb.jpg" alt="Coach VO2Max" loading="lazy">
             </div>
+            <h4 class="team__name">Tayeb</h4>
+            <span class="team__role">Co-fondateur</span>
+          </div>
+          <div class="team__member">
+            <div class="team__photo">
+              <img src="./assets/images/team/coach-3.jpg" alt="Coach VO2Max" loading="lazy">
+            </div>
+            <h4 class="team__name">Coach</h4>
+            <span class="team__role">Préparateur physique</span>
           </div>
         </div>
       </div>
