--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <div class="hero__content">
       <!-- Badge Google Rating -->
-      <div class="google-rating-badge reveal">
+      <a href="#testimonials" class="google-rating-badge reveal">
         <svg class="google-rating-badge__logo" viewBox="0 0 24 24" width="20" height="20">
           <path fill="#4285F4"
             d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" />
@@ -111,52 +111,32 @@
         <span class="google-rating-badge__stars">★★★★★</span>
         <span class="google-rating-badge__score">4.8</span>
         <span class="google-rating-badge__count">124 avis</span>
-      </div>
-
-      <div class="hero__badge reveal">
-        <span class="hero__badge-icon">🔥</span>
-        <span>Salle indépendante depuis 1998</span>
-      </div>
+      </a>
 
       <h1 class="hero__title reveal">
-        <span class="word">L'ambiance</span><br>
-        <span class="word text-gradient">Old School</span><br>
-        <span class="word">de Lyon</span>
+        <span class="word">Ta salle</span>
+        <span class="word text-gradient">Old School</span>
+        <span class="word">à Lyon</span>
       </h1>
 
       <p class="hero__subtitle reveal">
-        Ici, tout le monde se dit bonjour. Pas une chaîne de fitness — une vraie communauté de passionnés
-        où l'entraide et le dépassement de soi sont au rendez-vous depuis 25 ans.
+        600m² de musculation, cardio et cross training.
+        Une communauté de passionnés où tout le monde se dit bonjour depuis 1998.
       </p>
 
       <div class="hero__ctas reveal">
-        <a href="#contact" class="btn btn--primary btn--lg">
-          <span>Commencer maintenant</span>
-          <span class="btn__arrow">→</span>
+        <a href="#contact" class="btn btn--primary btn--lg hero__cta-main">
+          <span>🏋️ Essai Gratuit</span>
         </a>
-        <a href="#services" class="btn btn--outline btn--lg">
-          Découvrir la salle
+        <a href="tel:0437289014" class="btn btn--outline btn--lg">
+          <span>📞 04 37 28 90 14</span>
         </a>
       </div>
 
-      <div class="hero__stats reveal">
-        <div class="hero__stat">
-          <span class="hero__stat-value" data-counter="600">0</span>
-          <span class="hero__stat-unit">m²</span>
-          <span class="hero__stat-label">d'espace</span>
-        </div>
-        <div class="hero__stat-divider"></div>
-        <div class="hero__stat">
-          <span class="hero__stat-value" data-counter="25">0</span>
-          <span class="hero__stat-unit">+</span>
-          <span class="hero__stat-label">ans d'expérience</span>
-        </div>
-        <div class="hero__stat-divider"></div>
-        <div class="hero__stat">
-          <span class="hero__stat-value">7</span>
-          <span class="hero__stat-unit">j/7</span>
-          <span class="hero__stat-label">ouverts</span>
-        </div>
+      <div class="hero__trust reveal">
+        <span>✓ Sans engagement</span>
+        <span>✓ Coachs diplômés</span>
+        <span>✓ 7j/7</span>
       </div>
     </div>
 
@@ -165,6 +145,44 @@
       <div class="hero__scroll-line"></div>
     </div>
   </section>
+
+  <!-- Marquee Band -->
+  <div class="marquee">
+    <div class="marquee__content">
+      <span>MUSCULATION</span>
+      <span class="marquee__dot">•</span>
+      <span>CARDIO</span>
+      <span class="marquee__dot">•</span>
+      <span>CROSS TRAINING</span>
+      <span class="marquee__dot">•</span>
+      <span>COACHING PERSO</span>
+      <span class="marquee__dot">•</span>
+      <span>AMBIANCE OLD SCHOOL</span>
+      <span class="marquee__dot">•</span>
+      <span>DEPUIS 1998</span>
+      <span class="marquee__dot">•</span>
+      <span>600M²</span>
+      <span class="marquee__dot">•</span>
+      <span>LYON 7</span>
+      <span class="marquee__dot">•</span>
+      <span>MUSCULATION</span>
+      <span class="marquee__dot">•</span>
+      <span>CARDIO</span>
+      <span class="marquee__dot">•</span>
+      <span>CROSS TRAINING</span>
+      <span class="marquee__dot">•</span>
+      <span>COACHING PERSO</span>
+      <span class="marquee__dot">•</span>
+      <span>AMBIANCE OLD SCHOOL</span>
+      <span class="marquee__dot">•</span>
+      <span>DEPUIS 1998</span>
+      <span class="marquee__dot">•</span>
+      <span>600M²</span>
+      <span class="marquee__dot">•</span>
+      <span>LYON 7</span>
+      <span class="marquee__dot">•</span>
+    </div>
+  </div>
 
   <!-- Barbell Separator -->
   <div class="section-separator">
@@ -637,6 +655,132 @@
             Accueil, ambiance, équipements, tarifs...tout est au top dans cette salle !
           </p>
         </div>
+
+        <!-- Avis 7 - LOU TAG -->
+        <div class="google-review-card reveal">
+          <div class="google-review-card__header">
+            <div class="google-review-card__avatar" style="background: #673AB7;">L</div>
+            <div class="google-review-card__author">
+              <div class="google-review-card__name">LOU TAG</div>
+              <div class="google-review-card__meta">6 avis · 4 photos</div>
+            </div>
+          </div>
+          <div class="google-review-card__rating">
+            <span class="google-review-card__stars">★★★★★</span>
+            <span class="google-review-card__date">Il y a 7 ans</span>
+          </div>
+          <p class="google-review-card__text">
+            Si vous voulez une salle avec du bon matos, et des coachs costaud en anat, biomeca et méthode
+            d'entraînement: ne cherchez pas plus loin !
+          </p>
+        </div>
+
+        <!-- Avis 8 - Louis Fandre -->
+        <div class="google-review-card reveal">
+          <div class="google-review-card__header">
+            <div class="google-review-card__avatar" style="background: #00BCD4;">L</div>
+            <div class="google-review-card__author">
+              <div class="google-review-card__name">
+                Louis Fandre
+                <span class="google-review-card__badge">Local Guide</span>
+              </div>
+              <div class="google-review-card__meta">20 avis · 4 photos</div>
+            </div>
+          </div>
+          <div class="google-review-card__rating">
+            <span class="google-review-card__stars">★★★★★</span>
+            <span class="google-review-card__date">Il y a 8 ans</span>
+          </div>
+          <p class="google-review-card__text">
+            Une vraie salle de sport avec une mentalité, des membres et un staff au top pour la meilleure progression
+            possible quels que soient les objectifs !
+          </p>
+        </div>
+
+        <!-- Avis 9 - Ed Mes -->
+        <div class="google-review-card reveal">
+          <div class="google-review-card__header">
+            <div class="google-review-card__avatar" style="background: #009688;">E</div>
+            <div class="google-review-card__author">
+              <div class="google-review-card__name">
+                Ed Mes
+                <span class="google-review-card__badge">Local Guide</span>
+              </div>
+              <div class="google-review-card__meta">27 avis</div>
+            </div>
+          </div>
+          <div class="google-review-card__rating">
+            <span class="google-review-card__stars">★★★★★</span>
+            <span class="google-review-card__date">Il y a 4 ans</span>
+          </div>
+          <p class="google-review-card__text">
+            Accueil irréprochable, matériel de qualité et prix très intéressant ! Je recommande
+          </p>
+        </div>
+
+        <!-- Avis 10 - phacoustic -->
+        <div class="google-review-card reveal">
+          <div class="google-review-card__header">
+            <div class="google-review-card__avatar" style="background: #E91E63;">P</div>
+            <div class="google-review-card__author">
+              <div class="google-review-card__name">
+                phacoustic
+                <span class="google-review-card__badge">Local Guide</span>
+              </div>
+              <div class="google-review-card__meta">98 avis</div>
+            </div>
+          </div>
+          <div class="google-review-card__rating">
+            <span class="google-review-card__stars">★★★★★</span>
+            <span class="google-review-card__date">Il y a un an</span>
+          </div>
+          <p class="google-review-card__text">
+            Meilleure salle de Lyon
+          </p>
+        </div>
+
+        <!-- Avis 11 - flo vrn -->
+        <div class="google-review-card reveal">
+          <div class="google-review-card__header">
+            <div class="google-review-card__avatar" style="background: #FFC107;">F</div>
+            <div class="google-review-card__author">
+              <div class="google-review-card__name">
+                flo vrn
+                <span class="google-review-card__badge">Local Guide</span>
+              </div>
+              <div class="google-review-card__meta">34 avis · 3 photos</div>
+            </div>
+          </div>
+          <div class="google-review-card__rating">
+            <span class="google-review-card__stars">★★★★★</span>
+            <span class="google-review-card__date">Il y a 8 ans</span>
+          </div>
+          <p class="google-review-card__text">
+            Salle très sympa, bon accueil, matos bien entretenu, clients respectueux.
+          </p>
+        </div>
+
+        <!-- Avis 12 - Harry Riley -->
+        <div class="google-review-card reveal">
+          <div class="google-review-card__header">
+            <div class="google-review-card__avatar" style="background: #795548;">H</div>
+            <div class="google-review-card__author">
+              <div class="google-review-card__name">
+                Harry Riley
+                <span class="google-review-card__badge">Local Guide</span>
+              </div>
+              <div class="google-review-card__meta">31 avis · 280 photos</div>
+            </div>
+          </div>
+          <div class="google-review-card__rating">
+            <span class="google-review-card__stars">★★★★☆</span>
+            <span class="google-review-card__date">Il y a 2 ans</span>
+          </div>
+          <p class="google-review-card__text">
+            Excellente salle de sport – forfait journée à 10€. Un peu old school, mais cela ne gâche en rien l'ambiance
+            ni le nombre de machines. Le propriétaire est très sympathique.
+          </p>
+        </div>
       </div>
 
       <!-- Other Platforms -->
@@ -782,6 +926,57 @@
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2784.4788506968287!2d4.831197315557961!3d45.74639797910548!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4ea5e6d6b8fcd%3A0x8f7b2d5d4e6e6e6e!2s9%20Av.%20Leclerc%2C%2069007%20Lyon!5e0!3m2!1sfr!2sfr!4v1620000000000!5m2!1sfr!2sfr"
           width="100%" height="350" style="border:0; border-radius: 24px;" allowfullscreen="" loading="lazy">
         </iframe>
+      </div>
+
+      <!-- Directions -->
+      <div class="directions reveal">
+        <h3 class="directions__title">🗺️ Comment nous trouver ?</h3>
+        <p class="directions__subtitle">C'est facile, suis les étapes !</p>
+
+        <div class="directions__steps">
+          <div class="directions__step">
+            <img src="./assets/images/gym/portail-entree.png" alt="Portail d'entrée VO2Max"
+              class="directions__step-img">
+            <div class="directions__step-number">1</div>
+            <p class="directions__step-text">Passe le portail au 9 Avenue Leclerc</p>
+          </div>
+          <div class="directions__step">
+            <img src="./assets/images/gym/porte-entree.png" alt="Porte d'entrée VO2Max" class="directions__step-img">
+            <div class="directions__step-number">2</div>
+            <p class="directions__step-text">Entre par la porte vitrée "VO2Max"</p>
+          </div>
+          <div class="directions__step">
+            <div class="directions__step-img"
+              style="background: rgba(229,57,53,0.2); display: flex; align-items: center; justify-content: center; font-size: 3rem;">
+              🏋️</div>
+            <div class="directions__step-number">3</div>
+            <p class="directions__step-text">Monte au 2ème étage, c'est là !</p>
+          </div>
+        </div>
+
+        <div class="directions__transport">
+          <div class="directions__transport-item">
+            <span class="directions__transport-icon">🚋</span>
+            <div class="directions__transport-info">
+              <span class="directions__transport-type">Tram T1</span>
+              <span class="directions__transport-name">Arrêt Perrache</span>
+            </div>
+          </div>
+          <div class="directions__transport-item">
+            <span class="directions__transport-icon">🚌</span>
+            <div class="directions__transport-info">
+              <span class="directions__transport-type">Bus C7, 49, 63</span>
+              <span class="directions__transport-name">Arrêt Leclerc</span>
+            </div>
+          </div>
+          <div class="directions__transport-item">
+            <span class="directions__transport-icon">🚇</span>
+            <div class="directions__transport-info">
+              <span class="directions__transport-type">Métro A</span>
+              <span class="directions__transport-name">Perrache (5 min à pied)</span>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
