✨ Améliorations UX majeures
Hero:
- Titre empilé verticalement avec animations
- Compteurs animés (600m², 25+ ans, 124 avis)
- Barre de progression scroll en haut

Marquees:
- 5 séparateurs barbells → marquees défilants
- Textes variés par section
- Pause au hover
- Directions alternées

Animations:
- Parallax sur images galerie
- Steps directions animés en séquence
- Sticky CTA dans navbar après scroll hero
- Effet press sur boutons
- Underline animé sur liens navbar

Global:
- Progress bar rouge en haut de page
- Hover cards amélioré

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
     </div>
   </nav>
 
+  <!-- Scroll Progress Bar -->
+  <div class="scroll-progress" id="scroll-progress"></div>
+
   <!-- Hero Section -->
   <section class="hero" id="hero">
     <div class="hero__bg">
@@ -114,9 +117,9 @@
       </a>
 
       <h1 class="hero__title reveal">
-        <span class="word">Ta salle</span>
-        <span class="word text-gradient">Old School</span>
-        <span class="word">à Lyon</span>
+        <span class="hero__title-line">Ta salle</span>
+        <span class="hero__title-line text-gradient">Old School</span>
+        <span class="hero__title-line">à Lyon</span>
       </h1>
 
       <p class="hero__subtitle reveal">
@@ -133,10 +136,24 @@
         </a>
       </div>
 
-      <div class="hero__trust reveal">
-        <span>✓ Sans engagement</span>
-        <span>✓ Coachs diplômés</span>
-        <span>✓ 7j/7</span>
+      <div class="hero__stats reveal">
+        <div class="hero__stat">
+          <span class="hero__stat-value" data-counter="600">0</span>
+          <span class="hero__stat-unit">m²</span>
+          <span class="hero__stat-label">d'espace</span>
+        </div>
+        <div class="hero__stat-divider"></div>
+        <div class="hero__stat">
+          <span class="hero__stat-value" data-counter="25">0</span>
+          <span class="hero__stat-unit">+</span>
+          <span class="hero__stat-label">ans d'expérience</span>
+        </div>
+        <div class="hero__stat-divider"></div>
+        <div class="hero__stat">
+          <span class="hero__stat-value" data-counter="124">0</span>
+          <span class="hero__stat-unit">★</span>
+          <span class="hero__stat-label">avis 5 étoiles</span>
+        </div>
       </div>
     </div>
 
@@ -184,16 +201,25 @@
     </div>
   </div>
 
-  <!-- Barbell Separator -->
-  <div class="section-separator">
-    <div class="barbell-separator">
-      <div class="barbell-separator__weight"></div>
-      <div class="barbell-separator__weight barbell-separator__weight--small"></div>
-      <div class="barbell-separator__bar"></div>
-      <span class="barbell-separator__emoji">🏋️</span>
-      <div class="barbell-separator__bar"></div>
-      <div class="barbell-separator__weight barbell-separator__weight--small"></div>
-      <div class="barbell-separator__weight"></div>
+  <!-- Marquee Separator -->
+  <div class="marquee marquee--alt">
+    <div class="marquee__content">
+      <span>DÉPASSE TES LIMITES</span>
+      <span class="marquee__dot">•</span>
+      <span>AMBIANCE FAMILIALE</span>
+      <span class="marquee__dot">•</span>
+      <span>RÉSULTATS GARANTIS</span>
+      <span class="marquee__dot">•</span>
+      <span>COACHS PROS</span>
+      <span class="marquee__dot">•</span>
+      <span>DÉPASSE TES LIMITES</span>
+      <span class="marquee__dot">•</span>
+      <span>AMBIANCE FAMILIALE</span>
+      <span class="marquee__dot">•</span>
+      <span>RÉSULTATS GARANTIS</span>
+      <span class="marquee__dot">•</span>
+      <span>COACHS PROS</span>
+      <span class="marquee__dot">•</span>
     </div>
   </div>
 
@@ -269,16 +295,25 @@
     </div>
   </section>
 
-  <!-- Barbell Separator -->
-  <div class="section-separator">
-    <div class="barbell-separator">
-      <div class="barbell-separator__weight"></div>
-      <div class="barbell-separator__weight barbell-separator__weight--small"></div>
-      <div class="barbell-separator__bar"></div>
-      <span class="barbell-separator__emoji">💪</span>
-      <div class="barbell-separator__bar"></div>
-      <div class="barbell-separator__weight barbell-separator__weight--small"></div>
-      <div class="barbell-separator__weight"></div>
+  <!-- Marquee Separator -->
+  <div class="marquee marquee--alt marquee--reverse">
+    <div class="marquee__content">
+      <span>POIDS LIBRES</span>
+      <span class="marquee__dot">•</span>
+      <span>MACHINES GYMLECO</span>
+      <span class="marquee__dot">•</span>
+      <span>CARDIO TRAINING</span>
+      <span class="marquee__dot">•</span>
+      <span>CROSS FIT</span>
+      <span class="marquee__dot">•</span>
+      <span>POIDS LIBRES</span>
+      <span class="marquee__dot">•</span>
+      <span>MACHINES GYMLECO</span>
+      <span class="marquee__dot">•</span>
+      <span>CARDIO TRAINING</span>
+      <span class="marquee__dot">•</span>
+      <span>CROSS FIT</span>
+      <span class="marquee__dot">•</span>
     </div>
   </div>
 
@@ -348,16 +383,25 @@
     </div>
   </section>
 
-  <!-- Barbell Separator -->
-  <div class="section-separator">
-    <div class="barbell-separator">
-      <div class="barbell-separator__weight"></div>
-      <div class="barbell-separator__weight barbell-separator__weight--small"></div>
-      <div class="barbell-separator__bar"></div>
-      <span class="barbell-separator__emoji">🔥</span>
-      <div class="barbell-separator__bar"></div>
-      <div class="barbell-separator__weight barbell-separator__weight--small"></div>
-      <div class="barbell-separator__weight"></div>
+  <!-- Marquee Separator -->
+  <div class="marquee marquee--alt">
+    <div class="marquee__content">
+      <span>ESSAI GRATUIT</span>
+      <span class="marquee__dot">•</span>
+      <span>SANS ENGAGEMENT</span>
+      <span class="marquee__dot">•</span>
+      <span>TARIFS IMBATTABLES</span>
+      <span class="marquee__dot">•</span>
+      <span>7J/7 OUVERT</span>
+      <span class="marquee__dot">•</span>
+      <span>ESSAI GRATUIT</span>
+      <span class="marquee__dot">•</span>
+      <span>SANS ENGAGEMENT</span>
+      <span class="marquee__dot">•</span>
+      <span>TARIFS IMBATTABLES</span>
+      <span class="marquee__dot">•</span>
+      <span>7J/7 OUVERT</span>
+      <span class="marquee__dot">•</span>
     </div>
   </div>
 
@@ -444,16 +488,21 @@
     </div>
   </section>
 
-  <!-- Barbell Separator -->
-  <div class="section-separator">
-    <div class="barbell-separator">
-      <div class="barbell-separator__weight"></div>
-      <div class="barbell-separator__weight barbell-separator__weight--small"></div>
-      <div class="barbell-separator__bar"></div>
-      <span class="barbell-separator__emoji">⭐</span>
-      <div class="barbell-separator__bar"></div>
-      <div class="barbell-separator__weight barbell-separator__weight--small"></div>
-      <div class="barbell-separator__weight"></div>
+  <!-- Marquee Separator -->
+  <div class="marquee marquee--alt marquee--reverse">
+    <div class="marquee__content">
+      <span>ICI TOUT LE MONDE SE DIT BONJOUR</span>
+      <span class="marquee__dot">•</span>
+      <span>SALLE INDÉPENDANTE</span>
+      <span class="marquee__dot">•</span>
+      <span>DEPUIS 1998</span>
+      <span class="marquee__dot">•</span>
+      <span>ICI TOUT LE MONDE SE DIT BONJOUR</span>
+      <span class="marquee__dot">•</span>
+      <span>SALLE INDÉPENDANTE</span>
+      <span class="marquee__dot">•</span>
+      <span>DEPUIS 1998</span>
+      <span class="marquee__dot">•</span>
     </div>
   </div>
 
@@ -817,16 +866,21 @@
     </div>
   </section>
 
-  <!-- Barbell Separator -->
-  <div class="section-separator">
-    <div class="barbell-separator">
-      <div class="barbell-separator__weight"></div>
-      <div class="barbell-separator__weight barbell-separator__weight--small"></div>
-      <div class="barbell-separator__bar"></div>
-      <span class="barbell-separator__emoji">📍</span>
-      <div class="barbell-separator__bar"></div>
-      <div class="barbell-separator__weight barbell-separator__weight--small"></div>
-      <div class="barbell-separator__weight"></div>
+  <!-- Marquee Separator -->
+  <div class="marquee marquee--alt">
+    <div class="marquee__content">
+      <span>124 AVIS 5 ÉTOILES</span>
+      <span class="marquee__dot">•</span>
+      <span>NOTE 4.8/5</span>
+      <span class="marquee__dot">•</span>
+      <span>MEILLEURE SALLE DE LYON</span>
+      <span class="marquee__dot">•</span>
+      <span>124 AVIS 5 ÉTOILES</span>
+      <span class="marquee__dot">•</span>
+      <span>NOTE 4.8/5</span>
+      <span class="marquee__dot">•</span>
+      <span>MEILLEURE SALLE DE LYON</span>
+      <span class="marquee__dot">•</span>
     </div>
   </div>
 
