--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         <a href="#hero" class="navbar__link">Accueil</a>
         <a href="#services" class="navbar__link">Services</a>
         <a href="#about" class="navbar__link">À Propos</a>
+        <a href="#pricing" class="navbar__link">Tarifs</a>
         <a href="#contact" class="navbar__link">Contact</a>
-        <a href="#contact" class="btn btn--primary navbar__cta">Essai Gratuit</a>
       </div>
 
       <button class="navbar__toggle" aria-label="Menu">
@@ -157,10 +157,7 @@
       </div>
     </div>
 
-    <div class="hero__scroll">
-      <span>Scroll</span>
-      <div class="hero__scroll-line"></div>
-    </div>
+
   </section>
 
   <!-- Marquee Band -->
