--- a/index.html
+++ b/index.html
@@ -366,89 +366,85 @@
     </div>
   </div>
 
-  <!-- About Section -->
   <section class="about section" id="about">
     <div class="container">
+      <!-- Section Header -->
+      <div class="section-header reveal">
+        <span class="section-tag">🏠 À Propos</span>
+        <h2 class="section-title">
+          L'ambiance<br>
+          <span class="text-gradient">Old School</span>
+        </h2>
+      </div>
 
       <!-- Team Section -->
       <div class="team reveal">
         <h3 class="team__title">👋 L'équipe qui t'accueille</h3>
-        <p class="team__subtitle">Nassim, Tayeb et toute l'équipe sont là pour t'accompagner</p>
-
         <div class="team__grid">
           <div class="team__member">
             <div class="team__photo">
-              <img src="./assets/images/team/coach-nassim.jpg" alt="Coach VO2Max" loading="lazy">
+              <img src="./assets/images/team/coach-nassim.jpg" alt="Nassim - Co-fondateur" loading="lazy">
             </div>
             <h4 class="team__name">Nassim</h4>
             <span class="team__role">Co-fondateur</span>
           </div>
           <div class="team__member">
             <div class="team__photo">
-              <img src="./assets/images/team/coach-tayeb.jpg" alt="Coach VO2Max" loading="lazy">
+              <img src="./assets/images/team/coach-tayeb.jpg" alt="Tayeb - Co-fondateur" loading="lazy">
             </div>
             <h4 class="team__name">Tayeb</h4>
             <span class="team__role">Co-fondateur</span>
           </div>
           <div class="team__member">
             <div class="team__photo">
-              <img src="./assets/images/team/coach-3.jpg" alt="Coach VO2Max" loading="lazy">
+              <img src="./assets/images/team/coach-3.jpg" alt="Coach - Préparateur physique" loading="lazy">
             </div>
             <h4 class="team__name">Coach</h4>
             <span class="team__role">Préparateur physique</span>
           </div>
         </div>
-        <div class="about__grid">
-          <div class="about__content reveal">
-            <span class="section-tag">🏠 À Propos</span>
-            <h2 class="section-title">
-              L'ambiance<br>
-              <span class="text-gradient">Old School</span>
-            </h2>
-            <p class="about__text">
-              Depuis 1998, VO2Max est <strong>la salle indépendante</strong> des passionnés de musculation à Lyon.
-              Ici, pas de chaîne de fitness impersonnelle — une vraie communauté où tout le monde se dit bonjour.
-            </p>
-            <p class="about__text">
-              Notre philosophie ? <strong>Intimiste et authentique</strong>. Des équipements de qualité (Gymleco,
-              Matrix),
-              une ambiance familiale, et des coachs toujours disponibles pour t'accompagner.
-            </p>
+      </div>
 
-            <div class="about__values">
-              <div class="about__value">
-                <span class="about__value-icon">🤝</span>
-                <div>
-                  <h4>Communauté</h4>
-                  <p>Tout le monde se dit bonjour, entraide garantie</p>
-                </div>
-              </div>
-              <div class="about__value">
-                <span class="about__value-icon">🏋️</span>
-                <div>
-                  <h4>Old School</h4>
-                  <p>L'esprit authentique de la vraie musculation</p>
-                </div>
+      <!-- About Content Grid -->
+      <div class="about__grid reveal">
+        <div class="about__content">
+          <p class="about__text">
+            Depuis 1998, VO2Max est <strong>la salle indépendante</strong> des passionnés de musculation à Lyon.
+            Ici, pas de chaîne de fitness impersonnelle — une vraie communauté où tout le monde se dit bonjour.
+          </p>
+          <p class="about__text">
+            Notre philosophie ? <strong>Intimiste et authentique</strong>. Des équipements de qualité (Gymleco,
+            Matrix), une ambiance familiale, et des coachs toujours disponibles pour t'accompagner.
+          </p>
+
+          <div class="about__values">
+            <div class="about__value">
+              <span class="about__value-icon">🤝</span>
+              <div>
+                <h4>Communauté</h4>
+                <p>Tout le monde se dit bonjour, entraide garantie</p>
               </div>
             </div>
-          </div>
-
-          <div class="about__visual reveal">
-            <!-- Galerie Images -->
-            <div class="about__gallery">
-              <div class="about__gallery-main">
-                <img src="./assets/images/gym/salle-panorama.jpg" alt="Vue panoramique de la salle VO2Max"
-                  loading="lazy">
-              </div>
-              <div class="about__gallery-grid">
-                <img src="./assets/images/gym/salle-poids.jpg" alt="Espace poids libres" loading="lazy">
-                <img src="./assets/images/gym/dumbbells.jpg" alt="Rack d'haltères" loading="lazy">
+            <div class="about__value">
+              <span class="about__value-icon">🏋️</span>
+              <div>
+                <h4>Old School</h4>
+                <p>L'esprit authentique de la vraie musculation</p>
               </div>
             </div>
           </div>
         </div>
 
-
+        <!-- Gallery -->
+        <div class="about__gallery">
+          <div class="about__gallery-main">
+            <img src="./assets/images/gym/salle-panorama.jpg" alt="Vue panoramique de la salle VO2Max" loading="lazy">
+          </div>
+          <div class="about__gallery-grid">
+            <img src="./assets/images/gym/salle-poids.jpg" alt="Espace poids libres" loading="lazy">
+            <img src="./assets/images/gym/dumbbells.jpg" alt="Rack d'haltères" loading="lazy">
+          </div>
+        </div>
       </div>
     </div>
   </section>
